# rust-huffman

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  debug_test.rs
contents/: cnn.txt  gibberish.txt  mdpart.txt
examples/: basic_compression.rs
src/: bit_vec.rs  compressed_data.rs  huffman_codec.rs  hufftree.rs  lib.rs  metadata.rs  min_heap.rs
src/runtime/: channel.rs  executor.rs  mod.rs  task.rs
testing/: TFWOutput.txt  TFWtest.hc  gibberish.hc  mobydick_compressed.huff  sample_compressed.huff  testphrases.txt
